Printing: fix margins when printing to PostScript printers

Since we now send a PDF from print preview, the offsets aren't computed
in PrintRenderFrameHelper. They should be the printable area offsets,
not the content area. The content area offsets reflect the margins set
in Print Preview, which are no longer relevant since the generated PDF
already includes these margins.

Bug: 821485
Change-Id: I5ba009408bb7bb0251cdd85b3ed7b6e10e293826
Reviewed-on: https://chromium-review.googlesource.com/962878
Commit-Queue: Rebekah Potter <rbpotter@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543192}
Former-commit-id: 869d69c04ca623ce981ee94b6cdfc09492268885